--- a/views/events.erb
+++ b/views/events.erb
@@ -1,5 +1,5 @@
 <h1>All Events</h1>
 
 <% for event in @events %>
-    <p><%= event[:title] %></p>
+    <p><a href="/events/<%=event[:id] %>"><%= event[:title] %></p>
 <% end %>
