--- a/views/event.erb
+++ b/views/event.erb
@@ -1,5 +1,19 @@
-<h2><%= @event[:date] %></h2>
-<h2><%= @event[:title] %></h2>
+<div class="row">
+    <div class-"col-sm-9">
+        <h2>
+            <i class="far fa-calendar-alt"></i>
+            <%= @event[:date] %>
+        </h2>
+        <h1><%= @event[:title] %></h1>
+        <p><%= @event[:description] %></p>
+        <div class="media">
+            <i class="fas fa-thubs-up fa-3x"></i>
+</div>
+<div class="col-sm-3">
+    <h3>When?</h3>
+    <p>
+<h1><%= @event[:title] %></h1>
+
 
 <h3><%= @event[:description] %></h3>
 
